<!--
     Copyright (c) 2014 Mark Winter (Astonex)

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 2
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/margin_large"
        tools:context=".AddFriendActivity">

        <EditText
            android:id="@+id/addfriend_key"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/addfriend_friend_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:text="@string/addfriend_optional_title"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addfriend_friendAlias"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:hint="@string/addfriend_nick_hint" />

        <EditText
            android:id="@+id/addfriend_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/addfriend_friend_message" />

        <Button
            android:id="@+id/addFriend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/addfriend_button"
            android:onClick="addFriend" />

    </LinearLayout>
</ScrollView>