<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/settings_dht_ip"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/settings_dht_ip"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="@drawable/edittextbg"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" />

    <EditText
        android:id="@+id/settings_dht_port"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/settings_dht_port"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="@drawable/edittextbg"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp" />

    <EditText
        android:id="@+id/settings_dht_key"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:hint="@string/settings_dht_key"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="@drawable/edittextbg"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" />

</LinearLayout>