<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/friendNoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/friend_profile_note"
            android:textColor="#a0a2a2"
            android:textSize="20sp"
            android:textStyle="italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/friendAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/friend_profile_nick"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/friendAliasText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/aliasButton"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="updateAlias"
            android:text="@string/friend_profile_button" />


    </LinearLayout>
</ScrollView>